crates/review-buddy/tests/snapshots/terminal_pane__prompt_worktree_100x30.snap
---
source: crates/review-buddy/tests/terminal_pane.rs
expression: "prompt_frame((100, 30))"
---
 review buddy  ·  demo · 4 sources · 7 changes                                           Liminal HQ
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮
│  Waiting on you · 2                                                                              │
│▌ ◐ Add a menu bar and keyboard-driven menus                                                   2h │
│▌ GH review-buddy#214 · ada · review requested                           ¶3   2 open   CI running │
│  ● Raise ╭ Open a terminal for liminal-hq/review-buddy#214 ───────────────────────────╮       5h │
│  GH revie│ Create a separate checkout of acme/widgets#214 at                          │          │
│          │ /state/review-buddy/worktrees/demo-gh/acme__widgets/214.                   │          │
│  Worth a │ git -C /src/widgets fetch origin pull/214/head                             │          │
│  ✕ Cache │ git -C /src/widgets worktree add --detach                                  │       7h │
│  GL flow!│ /state/review-buddy/worktrees/demo-gh/acme__widgets/214 FETCH_HEAD         │I failing │
│  ● Tidy z│ Your own working copy at /src/widgets is left alone.                       │       1d │
│  GH dotfi│ Review Buddy never removes it for you. When you are done: git -C           │          │
│          │ /src/widgets worktree remove                                               │          │
╰──────────│ /state/review-buddy/worktrees/demo-gh/acme__widgets/214                    │──────────╯
╭ liminal-h│                                                                            │─────── ▼ ╮
│ Add a men│ The current directory starts the terminal where Review Buddy was started,  │          │
│ ada wants│ with the same environment variables, and creates nothing.                  │          │
│ +32 −1 · │                                                                            │          │
│ a Approve│ › No, cancel ‹    Create the worktree      Use the current directory       │          │
│  Overview│ ⏎ choose · ←→ switch · esc cancel                                          │          │
│ ─────────╰────────────────────────────────────────────────────────────────────────────╯───────── │
│ Adds a menu bar along the top and a Menu type that tracks the selected item.                     │
│                                                                                                  │
│ • Menu::select_next and Menu::select_prev move the highlight                                     │
│ • Menu::activate returns the action for the highlighted item                                     │
│ • The bar itself is a plain Line, so it picks up the active theme                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ←→ choose  ⏎ confirm  esc cancel
